# waveext

./: CMakeLists.txt  Jenkinsfile  LICENSE.txt  README.md  requirements.txt  waveflow.cfg  wf_env.sh
doc/: Build.md  Contributors.md  Developers_Guide.md  Getting_Started.md  Testing.md  tf_rebuild.md
test/: example_mnist_cor2015.py  example_squeezenet.py  test_avgpool2d.py  test_avgpool2d_grad.py  test_binop_dfx.py  test_bp.py  test_config.py  test_conv2d.py  test_conv2d_bp_gen.py  test_conv2d_dfx.py  test_conv2d_grad_input.py  test_conv2d_grad_input_dfx.py  test_conv2d_grad_weight.py  test_conv2d_grad_weight_dfx.py  test_conv_mnist.py  test_device.py  test_lstm.py  test_matmul.py  test_matmul_dfx.py  test_matmul_grad.py  test_matmul_grad_dfx.py  test_matmul_int.py  test_maxpool2d.py  test_maxpool2d_grad.py  test_mnist.py  test_mnist_fp16.py  test_multiply_grad_dfx.py  test_multiply_int.py  test_quantize.py  test_quantize_stochastic_dfx.py  test_quantize_stochastic_int.py  test_rp_matmul.py  test_sigmoid_dfx.py  test_sigmoid_int.py  test_softmax_dfx.py  test_sparse_softmax_cross_entropy_with_logits_int.py  test_tanh_dfx.py  test_tanh_int.py  test_vecadd.py  test_vecadd_dfx.py  (+4 more)
test/cnn/Resnet-20/: hyper_parameters.py  requirements.txt
test/cnn/Resnet-32/: cifar100_input.py  cifar100_train.py  hyper_parameters.py  resnet.py
test/lstm/conv/: example_conv_lstm.py
test/lstm/openNMT/: README.md  clear_data.py  example_opennmt.py  inference.py  requirements.txt  training.py
test/lstm/seq2seq/: data_processing.py  example_lstm_seq2seq.py
test/lstm/seq2seq_large/: data_processing.py  example_lstm_seq2seq.py
test/other/transformer/: hyperparams.py  modules.py  prepro.py  train.py
test/other/transformer/preprocessed/: de.vocab.tsv  en.vocab.tsv
test/other/word2vec/: word2vec.py
waveflow/: __init__.py  profile_trace.py
waveflow/kernel_lib/: CMakeLists.txt  add_dfx.cpp  avgpool2d_dfx.cpp  avgpool2d_grad_dfx.cpp  binop_dfx.h  bp_gen.cpp  config.cpp  config.h  conv2d.cpp  conv2d_dfx.cpp  conv2d_dfx_gradient_input.cpp  conv2d_dfx_gradient_weight.cpp  conv2d_gradient_input.cpp  conv2d_gradient_weight.cpp  cor15_bp_gen.cpp  dfx_op_base.cpp  dfx_op_base.h  dfx_registry.cpp  dfx_registry.h  dyn_fx_pt.cpp  dyn_fx_pt.h  fake_device.cpp  gemm_dfx.h  gemm_fp.h  gemm_int.cpp  gemm_int.h  math_ops.cc  math_ops.h  matmul.cpp  matmul_dfx.cpp  matmul_int.cpp  matmul_op.cpp  maxpool2d_dfx.cpp  maxpool2d_grad_dfx.cpp  mul_dfx.cpp  mul_int.cpp  quantize_dfx.cpp  quantize_int.cpp  sigmoid_dfx.cpp  sigmoid_grad_dfx.cpp  (+19 more)
